[project]
name = "csat-agent"
version = "0.1.0"
description = "CSAT math solving agent skeleton with LangGraph"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langgraph>=0.2.30",
    "langchain-core>=0.3.0",
    "sympy>=1.13.0",
    "numpy>=2.0.0",
    "scipy>=1.13.0",
    "mpmath>=1.3.0",
    "z3-solver>=4.13.0",
    "PyMuPDF>=1.24.0",
    "pdfplumber>=0.11.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csat_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"